docs: update example monorepo

--- a/example/monorepo/squadrons/storefinder/squadron.yaml
+++ b/example/monorepo/squadrons/storefinder/squadron.yaml
@@ -1,35 +1,4 @@
 # Schema version
 version: "1.0"
-prefix: storefinder # optional
-squadron:
-  nats:
-    chart:
-      name: nats
-      version: 0.7.5
-      repository: https://nats-io.github.io/k8s/helm/charts/
-    values:
-      foo: bar
-  frontend:
-    chart: ${PWD}/../path/to/local/chart
-    build: # same as docker-compose
-      image: registry.your-company.com/path/to/image
-      tag: {{ env "TAG" }}
-      context: ${PWD}
-      dockefile: path/to/dockerfile
-    values:
-      image: "{{ .Squadron.frontend.Build.target }}:{{ .Squadron.frontend.Build.tag }}"
-      service:
-        ports:
-          - {{ env "PORT" }}
 
-# squadron up -n storefinder storefinder   = helm upgrage --install --create-namespace -n storefinder storefinder
-# squadron down -n storefinder storefinder = helm uninstall storefinder -n storefinder
-# squadron up -n storefinder storefinder storefinder-frontend --push
-
-# squadron build ..
-# squadron generate .. --tgz
-
-# (squadron init ..)
-
-# squadron version
-# squadron help
+name: storefinder
