--- a/.husky.yaml
+++ b/.husky.yaml
@@ -1,6 +1,6 @@
 hooks:
   pre-commit:
-    - golangci-lint run
+    - golangci-lint run --fast
     - husky lint-staged
   commit-msg:
     - husky lint-commit
