--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,24 +5,34 @@ builds:
     main: ./cmd/main.go
     env:
       - CGO_ENABLED=0
-    ldflags:
-      - -s -w -X github.com/foomo/squadron/cmd/actions.version={{.Version}}
     goos:
       - windows
       - darwin
       - linux
     goarch:
       - amd64
-
-# .goreleaser.yml
+      - arm64
+    goarm:
+      - 7
+    flags:
+      - -trimpath
+    ldflags:
+      - -s -w -X github.com/foomo/squadron/cmd/actions.version={{.Version}}
 archives:
   - format: tar.gz
     format_overrides:
       - goos: windows
         format: zip
-
+changelog:
+  sort: asc
+  filters:
+    exclude:
+      - "^chore:"
+      - "^docs:"
+      - "^test:"
+      - "^wip:"
 brews:
-  # Reporitory to push the tap to.
+  # Repository to push the tap to.
   - tap:
       owner: foomo
       name: homebrew-squadron
