--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - v*.*.*
 
+env:
+  GO_VERSION: 1.18
+  GOLANGCI_LINT_VERSION: v1.45.2
+
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
@@ -12,22 +16,15 @@ jobs:
       GOFLAGS: -mod=readonly
       GOPROXY: https://proxy.golang.org
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Unshallow
-        run: git fetch --prune --unshallow
-
-      - name: Set up Go
-        uses: actions/setup-go@v2
+      - uses: actions/checkout@v3
+      - run: git fetch --prune --unshallow
+      - uses: actions/setup-go@v3
         with:
-          go-version: 1.16
-
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
-
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
+          go-version: ${{ env.GO_VERSION }}
+      - uses: golangci/golangci-lint-action@v3.1.0
+        with:
+          version: ${{ env.GOLANGCI_LINT_VERSION }}
+      - uses: goreleaser/goreleaser-action@v2
         with:
           distribution: goreleaser
           version: latest
