--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -27,4 +27,4 @@ jobs:
           version: ${{ env.GOLANGCI_LINT_VERSION }}
       - run: go test -v ./...
         env:
-          SHELL: "/bin/sh"
+          SHELL: "/bin/zsh"
