--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,19 +18,45 @@ builds:
       - -trimpath
     ldflags:
       - -s -w -X github.com/foomo/squadron/cmd/actions.version={{.Version}}
+
 archives:
   - format: tar.gz
     format_overrides:
       - goos: windows
         format: zip
+
 changelog:
-  sort: asc
   filters:
     exclude:
-      - "^chore:"
-      - "^docs:"
-      - "^test:"
-      - "^wip:"
+      - "^wip"
+      - "^test"
+      - "^docs"
+      - "^chore"
+      - "^style"
+      - "go mod tidy"
+      - "merge conflict"
+      - "Merge pull request"
+      - "Merge remote-tracking branch"
+      - "Merge branch"
+  groups:
+    - title: Features
+      regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
+      order: 0
+    - title: Dependency updates
+      regexp: '^.*?(feat|fix)\(deps\)!?:.+$'
+      order: 100
+    - title: "Bug fixes"
+      regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
+      order: 150
+    - title: "Security"
+      regexp: '^.*?sec(\([[:word:]]+\))??!?:.+$'
+      order: 200
+    - title: "Performace"
+      regexp: '^.*?perf(\([[:word:]]+\))??!?:.+$'
+      order: 250
+    - title: Other
+      order: 999
+
 brews:
   # Repository to push the tap to.
   - tap:
