--- a/_examples/monorepo/squadrons/checkout/backend/squadron.yaml
+++ b/_examples/monorepo/squadrons/checkout/backend/squadron.yaml
@@ -5,6 +5,7 @@ squadron:
   checkout:
     backend:
       chart: <% env "PROJECT_ROOT" %>/../common/charts/backend
+      tags: [ "backend" ]
       builds:
         default:
           tag: <% .Global.docker.tag | quote %>
