--- a/_examples/monorepo/squadrons/storefinder/frontend/squadron.yaml
+++ b/_examples/monorepo/squadrons/storefinder/frontend/squadron.yaml
@@ -5,6 +5,7 @@ squadron:
   storefinder:
     frontend:
       chart: <% env "PROJECT_ROOT" %>/../common/charts/frontend
+      tags: [ "frontend" ]
       builds:
         default:
           tag: "<% .Global.docker.tag %>"
