--- a/_examples/common/charts/frontend/templates/deployment.yaml
+++ b/_examples/common/charts/frontend/templates/deployment.yaml
@@ -7,8 +7,8 @@ metadata:
     app.kubernetes.io/component: {{ .Chart.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+  namespace: {{ .Release.Namespace }}
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app.kubernetes.io/name: {{ .Release.Name }}
