--- a/_examples/common/charts/frontend/templates/service.yaml
+++ b/_examples/common/charts/frontend/templates/service.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/component: {{ .Chart.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
     helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+  namespace: {{ .Release.Namespace }}
 spec:
   type: ClusterIP
   selector:
