--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,7 +16,7 @@ linters:
     #- dupl # Tool for code clone detection [fast: true, auto-fix: false]
     - forcetypeassert # finds forced type assertions [fast: true, auto-fix: false]
     #- gochecknoinits # Checks that no init functions are present in Go code [fast: true, auto-fix: false]
-    - goconst # Finds repeated strings that could be replaced by a constant [fast: true, auto-fix: false]
+    #- goconst # Finds repeated strings that could be replaced by a constant [fast: true, auto-fix: false]
     #- gocritic # Provides diagnostics that check for bugs, performance and style issues. [fast: false, auto-fix: false]
     - goimports # In addition to fixing imports, goimports also formats your code in the same style as gofmt. [fast: true, auto-fix: true]
     #- gomoddirectives # Manage the use of 'replace', 'retract', and 'excludes' directives in go.mod. [fast: true, auto-fix: false]
