--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -3,3 +3,6 @@ extends: default
 rules:
   line-length: disable
   document-start: disable
+  quoted-strings:
+    quote-type: single
+    required: false
