--- a/_examples/common/charts/backend/templates/deployment.yaml
+++ b/_examples/common/charts/backend/templates/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/name: {{ .Release.Name }}
     app.kubernetes.io/component: {{ .Chart.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    helm.sh/chart: '{{ .Chart.Name }}-{{ .Chart.Version }}'
   namespace: {{ .Release.Namespace }}
 spec:
   selector:
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
         - name: {{ .Release.Name }}
-          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+          image: '{{ .Values.image.repository }}:{{ .Values.image.tag }}'
           ports:
             - name: http
               protocol: TCP
