--- a/_examples/common/charts/frontend/templates/ingress.yaml
+++ b/_examples/common/charts/frontend/templates/ingress.yaml
@@ -6,14 +6,14 @@ metadata:
     app.kubernetes.io/name: {{ .Release.Name }}
     app.kubernetes.io/component: {{ .Chart.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    helm.sh/chart: '{{ .Chart.Name }}-{{ .Chart.Version }}'
   namespace: {{ .Release.Namespace }}
 spec:
   tls:
-    - hosts: [ "foo.com" ]
+    - hosts: ['foo.com']
       secretName: foo-com-cert
   rules:
-    - host:  foo.com
+    - host: foo.com
       http:
         paths:
           - pathType: Prefix
