--- a/_examples/monorepo/squadrons/checkout/frontend/squadron.yaml
+++ b/_examples/monorepo/squadrons/checkout/frontend/squadron.yaml
@@ -1,22 +1,22 @@
 # Schema version
-version: "2.0"
+version: '2.0'
 
 squadron:
   checkout:
     frontend:
       chart: <% env "PROJECT_ROOT" %>/../common/charts/frontend
-      tags: [ "frontend" ]
+      tags: ['frontend']
       builds:
         default:
-          tag: "<% .Global.docker.tag %>"
+          tag: <% .Global.docker.tag | quote %>
           image: <% .Global.docker.registry %>/checkout-frontend
           context: <% env "PROJECT_ROOT" %>/squadrons/checkout/frontend
           dockerfile: <% env "PROJECT_ROOT" %>/../common/docker/frontend.Dockerfile
-          dependencies: [ "frontend-base" ]
+          dependencies: ['frontend-base']
           args:
-            - "BASE_IMAGE=<% .Global.docker.registry %>/frontend-base"
-            - "BASE_IMAGE_TAG=<% .Global.docker.tag | quote %>"
+            - 'BASE_IMAGE=<% .Global.docker.registry %>/frontend-base'
+            - 'BASE_IMAGE_TAG=<% .Global.docker.tag | quote %>'
       values:
         image:
-          tag: "<% .Global.docker.tag %>"
+          tag: <% .Global.docker.tag | quote %>
           repository: <% .Squadron.checkout.frontend.builds.default.image %>
