--- a/_examples/monorepo/squadrons/storefinder/backend/squadron.yaml
+++ b/_examples/monorepo/squadrons/storefinder/backend/squadron.yaml
@@ -1,21 +1,21 @@
 # Schema version
-version: "2.0"
+version: '2.0'
 
 squadron:
   storefinder:
     backend:
       chart: <% env "PROJECT_ROOT" %>/../common/charts/backend
-      tags: [ "backend" ]
+      tags: ['backend']
       builds:
         default:
           tag: <% .Global.docker.tag | quote %>
           image: <% .Global.docker.registry %>/storefinder-backend
           context: <% env "PROJECT_ROOT" %>/squadrons/storefinder/backend
           dockerfile: <% env "PROJECT_ROOT" %>/../common/docker/backend.Dockerfile
-          dependencies: [ "backend-base" ]
+          dependencies: ['backend-base']
           args:
-            - "BASE_IMAGE=<% .Global.docker.registry %>/backend-base"
-            - "BASE_IMAGE_TAG=<% .Global.docker.tag | quote %>"
+            - 'BASE_IMAGE=<% .Global.docker.registry %>/backend-base'
+            - 'BASE_IMAGE_TAG=<% .Global.docker.tag | quote %>'
       values:
         image:
           tag: <% .Global.docker.tag | quote %>
