--- a/testdata/override/squadron.yaml
+++ b/testdata/override/squadron.yaml
@@ -1,4 +1,4 @@
-version: '2.0'
+version: "2.0"
 
 squadron:
   storefinder:
@@ -7,9 +7,9 @@ squadron:
       builds:
         default:
           tag: latest
-          dockerfile: Dockerfile
+          file: Dockerfile
           image: docker.mycompany.com/mycomapny/frontend
-          args:
+          build_arg:
             - "foo=foo"
             - "bar=bar"
       values:
@@ -21,9 +21,9 @@ squadron:
       builds:
         default:
           tag: latest
-          dockerfile: Dockerfile
+          file: Dockerfile
           image: docker.mycompany.com/mycomapny/backend
-          args:
+          build_arg:
             - "foo=foo"
             - "bar=bar"
       values:
