--- a/testdata/tags/snapshop-template.yaml
+++ b/testdata/tags/snapshop-template.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/name: backend
     app.kubernetes.io/component: backend
     app.kubernetes.io/managed-by: Helm
-    helm.sh/chart: backend-0.0.1
+    helm.sh/chart: 'backend-0.0.1'
   namespace: default
 spec:
   type: ClusterIP
@@ -28,7 +28,7 @@ metadata:
     app.kubernetes.io/name: backend
     app.kubernetes.io/component: backend
     app.kubernetes.io/managed-by: Helm
-    helm.sh/chart: backend-0.0.1
+    helm.sh/chart: 'backend-0.0.1'
   namespace: default
 spec:
   selector:
@@ -43,7 +43,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: nginx:latest
+          image: 'nginx:latest'
           ports:
             - name: http
               protocol: TCP
