--- a/testdata/tags/snapshop-template.yaml
+++ b/testdata/tags/snapshop-template.yaml
@@ -3,9 +3,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
+  name: checkout-backend
   labels:
-    app.kubernetes.io/name: backend
+    app.kubernetes.io/name: checkout-backend
     app.kubernetes.io/component: backend
     app.kubernetes.io/managed-by: Helm
     helm.sh/chart: 'backend-0.0.1'
@@ -13,7 +13,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app.kubernetes.io/name: backend
+    app.kubernetes.io/name: checkout-backend
     app.kubernetes.io/component: backend
   ports:
     - name: http
@@ -23,9 +23,9 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend
+  name: checkout-backend
   labels:
-    app.kubernetes.io/name: backend
+    app.kubernetes.io/name: checkout-backend
     app.kubernetes.io/component: backend
     app.kubernetes.io/managed-by: Helm
     helm.sh/chart: 'backend-0.0.1'
@@ -33,16 +33,16 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: backend
+      app.kubernetes.io/name: checkout-backend
       app.kubernetes.io/component: backend
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: backend
+        app.kubernetes.io/name: checkout-backend
         app.kubernetes.io/component: backend
     spec:
       containers:
-        - name: backend
+        - name: checkout-backend
           image: 'nginx:latest'
           ports:
             - name: http
