--- a/testdata/template/snapshop-template.yaml
+++ b/testdata/template/snapshop-template.yaml
@@ -3,9 +3,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend
+  name: storefinder-backend
   labels:
-    app.kubernetes.io/name: backend
+    app.kubernetes.io/name: storefinder-backend
     app.kubernetes.io/component: backend
     app.kubernetes.io/managed-by: Helm
     helm.sh/chart: 'backend-0.0.1'
@@ -13,7 +13,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app.kubernetes.io/name: backend
+    app.kubernetes.io/name: storefinder-backend
     app.kubernetes.io/component: backend
   ports:
     - name: http
@@ -23,9 +23,9 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend
+  name: storefinder-backend
   labels:
-    app.kubernetes.io/name: backend
+    app.kubernetes.io/name: storefinder-backend
     app.kubernetes.io/component: backend
     app.kubernetes.io/managed-by: Helm
     helm.sh/chart: 'backend-0.0.1'
@@ -33,16 +33,16 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: backend
+      app.kubernetes.io/name: storefinder-backend
       app.kubernetes.io/component: backend
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: backend
+        app.kubernetes.io/name: storefinder-backend
         app.kubernetes.io/component: backend
     spec:
       containers:
-        - name: backend
+        - name: storefinder-backend
           image: 'docker.mycompany.com/mycomapny/frontend-admin:latest'
           ports:
             - name: http
@@ -53,9 +53,9 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
+  name: storefinder-frontend
   labels:
-    app.kubernetes.io/name: frontend
+    app.kubernetes.io/name: storefinder-frontend
     app.kubernetes.io/component: frontend
     app.kubernetes.io/managed-by: Helm
     helm.sh/chart: 'frontend-0.0.1'
@@ -63,7 +63,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app.kubernetes.io/name: frontend
+    app.kubernetes.io/name: storefinder-frontend
     app.kubernetes.io/component: frontend
   ports:
     - name: http
@@ -73,9 +73,9 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend
+  name: storefinder-frontend
   labels:
-    app.kubernetes.io/name: frontend
+    app.kubernetes.io/name: storefinder-frontend
     app.kubernetes.io/component: frontend
     app.kubernetes.io/managed-by: Helm
     helm.sh/chart: 'frontend-0.0.1'
@@ -83,16 +83,16 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: frontend
+      app.kubernetes.io/name: storefinder-frontend
       app.kubernetes.io/component: frontend
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: frontend
+        app.kubernetes.io/name: storefinder-frontend
         app.kubernetes.io/component: frontend
     spec:
       containers:
-        - name: frontend
+        - name: storefinder-frontend
           image: 'docker.mycompany.com/mycomapny/frontend:latest'
           ports:
             - name: http
@@ -103,9 +103,9 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: frontend
+  name: storefinder-frontend
   labels:
-    app.kubernetes.io/name: frontend
+    app.kubernetes.io/name: storefinder-frontend
     app.kubernetes.io/component: frontend
     app.kubernetes.io/managed-by: Helm
     helm.sh/chart: 'frontend-0.0.1'
@@ -122,7 +122,7 @@ spec:
             path: /
             backend:
               service:
-                name: frontend
+                name: storefinder-frontend
                 port:
                   name: http
                   number: 80
