--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,17 +18,21 @@ jobs:
         with:
           fetch-depth: 0
 
-      - run: git fetch --force --tags
-
-      - uses: actions/setup-go@v4
+      - uses: actions/setup-go@v5
         with:
           check-latest: true
-          go-version-file: 'go.mod'
+          go-version-file: go.mod
+
+      - id: app_token
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ secrets.TOKEN_APP_ID }}
+          private_key: ${{ secrets.TOKEN_APP_PRIVATE_KEY }}
+          installation_id: ${{ secrets.TOKEN_APP_INSTALLATION_ID }}
 
       - uses: goreleaser/goreleaser-action@v5
         with:
-          distribution: goreleaser
           version: latest
-          args: release --rm-dist
+          args: release --clean
         env:
-          GITHUB_TOKEN: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.app_token.outputs.token }}
