--- a/testdata/extends/snapshop-config.yaml
+++ b/testdata/extends/snapshop-config.yaml
@@ -14,6 +14,9 @@ squadron:
         image:
           repository: nginx
           tag: latest
+        null_obj: null
+        null_tags: null
         tags:
         - ONE
         - TWO
+        - THREE
