--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,5 @@
+version: 2
+
 project_name: squadron
 
 release:
@@ -8,6 +10,9 @@ release:
 
 builds:
   - binary: squadron
+    main: ./cmd/main.go
+    env:
+      - CGO_ENABLED=0
     goos:
       - windows
       - darwin
@@ -17,27 +22,21 @@ builds:
       - arm64
     goarm:
       - '7'
-    env:
-      - CGO_ENABLED=0
-    main: ./cmd/main.go
     flags:
       - -trimpath
-    ldflags: -s -w -X github.com/foomo/squadron/cmd/actions.version={{.Version}}
+    ldflags:
+      - -s -w -X github.com/foomo/squadron/cmd/actions.version={{.Version}}
 
 archives:
   - format: tar.gz
     format_overrides:
       - goos: windows
         format: zip
-    files:
-      - LICENSE
-      - README.md
 
 changelog:
   use: github-native
 
 brews:
-  # Repository to push the tap to.
   - repository:
       owner: foomo
       name: homebrew-tap
