--- a/.husky.yaml
+++ b/.husky.yaml
@@ -8,7 +8,7 @@ hooks:
 
 lint-staged:
   '*.go':
-    - goimports -l -w
+    - golangci-lint fmt
 
 lint-commit:
   types: '^(feat|fix|build|chore|docs|perf|refactor|revert|style|test|wip)$'
