--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,8 +1,7 @@
 version: "2"
 run:
   go: 1.24.1
-  build-tags:
-    - safe
+  build-tags: [safe]
   modules-download-mode: readonly
 linters:
   default: none
