--- a/.golangci.yml
+++ b/.golangci.yml
@@ -186,6 +186,8 @@ linters:
           disabled: true
         - name: indent-error-flow
           disabled: true
+        - name: var-naming
+          disabled: true
     testifylint:
       disable:
         - float-compare
