fix: lint issues

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -188,6 +188,8 @@ linters:
           disabled: true
         - name: var-naming
           disabled: true
+        - name: enforce-switch-style
+          disabled: true
     testifylint:
       disable:
         - float-compare
