--- a/testdata/extends/squadron.base.yaml
+++ b/testdata/extends/squadron.base.yaml
@@ -1,7 +1,9 @@
 image:
   tag: unknown
   repository: nginx
-env: <% toYaml .Vars.env | nindent 10 %>
+env:
+  ONE: unknown
+  THREE: baz
 tags:
   - ONE
   - TWO
