chore: add docker release

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -46,3 +46,73 @@ brews:
     description: "CLI utility manage infrastructure as code with helm"
     test: |
       system "#{bin}/squadron version"
+
+dockers:
+  - use: buildx
+    goos: linux
+    goarch: amd64
+    dockerfile: Dockerfile
+    image_templates:
+      - '{{ if eq .Prerelease "" }}foomo/squadron:latest-amd64{{ end }}'
+      - 'foomo/squadron:{{ .Version }}-amd64'
+      - '{{ if eq .Prerelease "" }}foomo/squadron:{{ .Major }}-amd64{{ end }}'
+      - '{{ if eq .Prerelease "" }}foomo/squadron:{{ .Major }}.{{ .Minor }}-amd64{{ end }}'
+    build_flag_templates:
+      - '--pull'
+      # https://github.com/opencontainers/image-spec/blob/main/annotations.md#pre-defined-annotation-keys
+      - '--label=org.opencontainers.image.title={{.ProjectName}}'
+      - '--label=org.opencontainers.image.description=Serves content tree structures very quickly'
+      - '--label=org.opencontainers.image.source={{.GitURL}}'
+      - '--label=org.opencontainers.image.url={{.GitURL}}'
+      - '--label=org.opencontainers.image.documentation={{.GitURL}}'
+      - '--label=org.opencontainers.image.created={{.Date}}'
+      - '--label=org.opencontainers.image.revision={{.FullCommit}}'
+      - '--label=org.opencontainers.image.version={{.Version}}'
+      - '--platform=linux/amd64'
+
+  - use: buildx
+    goos: linux
+    goarch: arm64
+    dockerfile: Dockerfile
+    image_templates:
+      - '{{ if eq .Prerelease "" }}foomo/squadron:latest-arm64{{ end }}'
+      - 'foomo/squadron:{{ .Version }}-arm64'
+      - '{{ if eq .Prerelease "" }}foomo/squadron:{{ .Major }}-arm64{{ end }}'
+      - '{{ if eq .Prerelease "" }}foomo/squadron:{{ .Major }}.{{ .Minor }}-arm64{{ end }}'
+    build_flag_templates:
+      - '--pull'
+      # https://github.com/opencontainers/image-spec/blob/main/annotations.md#pre-defined-annotation-keys
+      - '--label=org.opencontainers.image.title={{.ProjectName}}'
+      - '--label=org.opencontainers.image.description=Serves content tree structures very quickly'
+      - '--label=org.opencontainers.image.source={{.GitURL}}'
+      - '--label=org.opencontainers.image.url={{.GitURL}}'
+      - '--label=org.opencontainers.image.documentation={{.GitURL}}'
+      - '--label=org.opencontainers.image.created={{.Date}}'
+      - '--label=org.opencontainers.image.revision={{.FullCommit}}'
+      - '--label=org.opencontainers.image.version={{.Version}}'
+      - '--platform=linux/arm64'
+
+docker_manifests:
+  # basic
+  - name_template: 'foomo/squadron:latest'
+    image_templates:
+      - 'foomo/squadron:latest-amd64'
+      - 'foomo/squadron:latest-arm64'
+    skip_push: auto
+
+  - name_template: 'foomo/squadron:{{ .Version }}'
+    image_templates:
+      - 'foomo/squadron:{{ .Version }}-amd64'
+      - 'foomo/squadron:{{ .Version }}-arm64'
+
+  - name_template: 'foomo/squadron:{{ .Major }}'
+    image_templates:
+      - 'foomo/squadron:{{ .Major }}-amd64'
+      - 'foomo/squadron:{{ .Major }}-arm64'
+    skip_push: auto
+
+  - name_template: 'foomo/squadron:{{ .Major }}.{{ .Minor }}'
+    image_templates:
+      - 'foomo/squadron:{{ .Major }}.{{ .Minor }}-amd64'
+      - 'foomo/squadron:{{ .Major }}.{{ .Minor }}-arm64'
+    skip_push: auto
