--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -38,6 +38,9 @@ jobs:
         env:
           SHELL: "/bin/zsh"
 
+      - name: Run docker
+        run: make docker
+
       - uses: coverallsapp/github-action@v2
         with:
           file: coverage.out
