--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -22,6 +22,11 @@ jobs:
         with:
           go-version-file: go.mod
 
+      - uses: docker/setup-qemu-action@v3
+
+      - uses: docker/setup-buildx-action@v3
+
+
       - id: app_token
         uses: tibdex/github-app-token@v2
         with:
