--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -29,10 +29,10 @@ builds:
       - -s -w -X github.com/foomo/squadron/cmd/actions.version={{.Version}}
 
 archives:
-  - format: tar.gz
-    format_overrides:
+  - formats: [ tar.gz ]
+  - format_overrides:
       - goos: windows
-        format: zip
+        formats: [ zip ]
 
 changelog:
   use: github-native
@@ -61,7 +61,7 @@ dockers:
       - '--pull'
       # https://github.com/opencontainers/image-spec/blob/main/annotations.md#pre-defined-annotation-keys
       - '--label=org.opencontainers.image.title={{.ProjectName}}'
-      - '--label=org.opencontainers.image.description=Docker Compose for Kubernetes'
+      - '--label=org.opencontainers.image.description=CLI utility manage infrastructure as code with helm'
       - '--label=org.opencontainers.image.source={{.GitURL}}'
       - '--label=org.opencontainers.image.url={{.GitURL}}'
       - '--label=org.opencontainers.image.documentation={{.GitURL}}'
@@ -83,7 +83,7 @@ dockers:
       - '--pull'
       # https://github.com/opencontainers/image-spec/blob/main/annotations.md#pre-defined-annotation-keys
       - '--label=org.opencontainers.image.title={{.ProjectName}}'
-      - '--label=org.opencontainers.image.description=Docker Compose for Kubernetes'
+      - '--label=org.opencontainers.image.description=CLI utility manage infrastructure as code with helm'
       - '--label=org.opencontainers.image.source={{.GitURL}}'
       - '--label=org.opencontainers.image.url={{.GitURL}}'
       - '--label=org.opencontainers.image.documentation={{.GitURL}}'
@@ -104,6 +104,7 @@ docker_manifests:
     image_templates:
       - 'foomo/squadron:{{ .Version }}-amd64'
       - 'foomo/squadron:{{ .Version }}-arm64'
+    skip_push: auto
 
   - name_template: 'foomo/squadron:{{ .Major }}'
     image_templates:
