--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,8 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+      - uses: jdx/mise-action@v2
+
       - uses: actions/checkout@v5
         with:
           fetch-depth: 0
