--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - uses: jdx/mise-action@v2
+
       - uses: actions/checkout@v5
 
       - uses: actions/setup-go@v5
