chore: update actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,9 @@ jobs:
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-go@v5
+      - uses: actions/setup-go@v6
         with:
+          check-latest: true
           go-version-file: go.mod
 
       - uses: docker/setup-qemu-action@v3
