--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: checks
+name: Test Branch
 
 on:
   push:
@@ -23,7 +23,7 @@ jobs:
 
       - uses: actions/checkout@v5
 
-      - uses: actions/setup-go@v5
+      - uses: actions/setup-go@v6
         with:
           go-version-file: 'go.mod'
 
@@ -33,7 +33,10 @@ jobs:
 
       - uses: golangci/golangci-lint-action@v8
         with:
-          version: latest
+          install-mode: none
+
+      - name: Run lint
+        run: make lint
 
       - name: Run tests
         run: make test
