--- a/.mise.toml
+++ b/.mise.toml
@@ -1,5 +1,9 @@
 [tools]
+# https://github.com/oven-sh/bun/releases
+bun = "1.3.2"
+# https://github.com/biomejs/biome/releases
+biome = "2.3.6"
+# https://github.com/evilmartians/lefthook/releases
+lefthook = "2.0.4"
 # https://github.com/golangci/golangci-lint/releases
-golangci-lint = "2.5.0"
-# https://github.com/go-courier/husky/releases
-"github:go-courier/husky" = "1.8.1"
+golangci-lint = "2.6.2"
