fix: lint issues

--- a/biome.json
+++ b/biome.json
@@ -25,5 +25,9 @@
 		"parser": {
 			"allowComments": true
 		}
+	},
+	"files": {
+		"ignoreUnknown": true,
+		"includes": ["**", "!squadron.schema.json"]
 	}
 }
