--- a/testdata/vars/snapshop-config.yaml
+++ b/testdata/vars/snapshop-config.yaml
@@ -14,8 +14,7 @@ squadron:
         version: 0.0.1
       builds:
         default:
-          tag: latest
-          image: storefinder/backend
+          tag: [ storefinder/backend:latest ]
       values:
         env:
           bar: [one two]
