--- a/testdata/override/snapshop-config-norender.yaml
+++ b/testdata/override/snapshop-config-norender.yaml
@@ -14,9 +14,8 @@ squadron:
           - bar=baz
           - baz=baz
           file: Dockerfile
-          tag: nightly
-          image: storefinder/frontend
+          tag: [ storefinder/frontend:latest ]
       values:
         image:
-          repository: <% .Squadron.storefinder.frontend.builds.default.image %>
-          tag: <% .Squadron.storefinder.frontend.builds.default.tag %>
+          repository: storefinder/frontend
+          tag: latest
