--- a/testdata/override/squadron.yaml
+++ b/testdata/override/squadron.yaml
@@ -6,27 +6,25 @@ squadron:
       chart: <% env "PROJECT_ROOT" %>/_examples/common/charts/frontend
       builds:
         default:
-          tag: latest
+          tag: [ storefinder/frontend:latest ]
           file: Dockerfile
-          image: storefinder/frontend
           build_arg:
             - "foo=foo"
             - "bar=bar"
       values:
         image:
-          tag: <% .Squadron.storefinder.frontend.builds.default.tag %>
-          repository: <% .Squadron.storefinder.frontend.builds.default.image %>
+          repository: storefinder/frontend
+          tag: latest
     backend:
       chart: <% env "PROJECT_ROOT" %>/_examples/common/charts/backend
       builds:
         default:
-          tag: latest
+          tag: [ storefinder/backend:latest ]
           file: Dockerfile
-          image: storefinder/backend
           build_arg:
             - "foo=foo"
             - "bar=bar"
       values:
         image:
-          tag: <% .Squadron.storefinder.backend.builds.default.tag %>
-          repository: <% .Squadron.storefinder.backend.builds.default.image %>
+          repository: storefinder/backend
+          tag: latest
