feat: add output option

--- a/testdata/override/snapshop-config-norender.yaml
+++ b/testdata/override/snapshop-config-norender.yaml
@@ -14,7 +14,8 @@ squadron:
           - bar=baz
           - baz=baz
           file: Dockerfile
-          tag: [ storefinder/frontend:latest ]
+          tag:
+          - storefinder/frontend:latest
       values:
         image:
           repository: storefinder/frontend
