--- a/testdata/bake/snapshop-bakefile.yaml
+++ b/testdata/bake/snapshop-bakefile.yaml
@@ -1,3 +1,8 @@
+variable "TAG" {
+  type = string
+  default = "$TAG"
+  description = "Tag to use for build"
+}
 group "all" {
   targets = ["storefinder-backend-default"]
 }
@@ -7,10 +12,10 @@ target "storefinder-backend-default" {
     SQUADRON_UNIT_NAME = "backend"
   }
   labels = {
-    "org.opencontainers.image.created"  = "-"
-    "org.opencontainers.image.revision" = "-"
+    "org.opencontainers.image.created"  = "2025-11-23T11:26:35+01:00"
+    "org.opencontainers.image.revision" = "4279a3f7a2c8b094e1abbfb6fe1eab7c3b6f5f33"
     "org.opencontainers.image.source"   = "https://github.com/foomo/squadron"
-    "org.opencontainers.image.version"  = "-"
+    "org.opencontainers.image.version"  = "feature/update-build"
   }
-  tags = ["storefinder/backend:latest"]
+  tags = ["storefinder/backend:${TAG}"]
 }
